--- a/NLayerWebApi/NLayerWebApi.csproj
+++ b/NLayerWebApi/NLayerWebApi.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\RepositoryLayer\RepositoryLayer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+  </ItemGroup>
+
 </Project>
